--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,7 +24,7 @@
 
         
     </head>
-    <body>
+    <body style="background-image: url(/sistemaPrediccion/web/14103-NPD9IX.png);">
         <div id="body" class="container">
         <h3 id="imgLOAD">Cargando...</h3>   
             {% block body %}
