--- a/app/Resources/views/usuario/index.html.twig
+++ b/app/Resources/views/usuario/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'UserBundle::layout.html.twig' %}
+{% extends 'FOSUserBundle::layout.html.twig' %}
 {% block fos_user_content %}
 {% if form is defined %}
 {{ form_start(form) }}
