fondo y estilo index

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,8 +24,8 @@
 
         
     </head>
-    <body style="background-image: url(/sistemaPrediccion/web/14103-NPD9IX.png);">
-        <div id="body" class="container">
+    <body style="background-image: url(/sistemaPrediccion/web/fondo.png);">
+        <div id="body" class="container" style="background: rgba(248,248,255,0.5);">
         <h3 id="imgLOAD">Cargando...</h3>   
             {% block body %}
             {% endblock %}
