--- a/app/Resources/views/ejercicio/edit.html.twig
+++ b/app/Resources/views/ejercicio/edit.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
-
+{% block stylesheets %}
+    {{ parent() }}
+    <script src="http://cdn.ckeditor.com/4.5.7/standard-all/ckeditor.js"></script>
+{% endblock %} 
 {% block body %}
     <h1>Ejercicio edit</h1>
 
@@ -18,4 +21,30 @@
             {{ form_end(delete_form) }}
         </li>
     </ul>
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        CKEDITOR.replace( 'ejercicio_enunciado', {
+            extraPlugins: 'mathjax',
+            mathJaxLib: 'http://cdn.mathjax.org/mathjax/2.2-latest/MathJax.js?config=TeX-AMS_HTML',
+            height: 200
+        } );
+        CKEDITOR.add 
+        CKEDITOR.replace( 'ejercicio_solucionDetallada', {
+            extraPlugins: 'mathjax',
+            mathJaxLib: 'http://cdn.mathjax.org/mathjax/2.2-latest/MathJax.js?config=TeX-AMS_HTML',
+            height: 200
+        } );
+        CKEDITOR.add 
+        CKEDITOR.replace( 'ejercicio_soluciones_0_expresion', {
+            extraPlugins: 'mathjax',
+            mathJaxLib: 'http://cdn.mathjax.org/mathjax/2.2-latest/MathJax.js?config=TeX-AMS_HTML',
+            height: 200
+        } );
+
+        if ( CKEDITOR.env.ie && CKEDITOR.env.version == 8 ) {
+            document.getElementById( 'ie8-warning' ).className = 'tip alert';
+        }
+    </script>
 {% endblock %}
