--- a/app/Resources/views/tema/new.html.twig
+++ b/app/Resources/views/tema/new.html.twig
@@ -4,7 +4,7 @@
     <script src="http://cdn.ckeditor.com/4.5.7/standard-all/ckeditor.js"></script>
 {% endblock %} 
 {% block body %}
-    <h1>Ejercicio creation</h1>
+    <h1>Tema creation</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
@@ -13,30 +13,20 @@
 
     <ul>
         <li>
-            <a href="{{ path('ejercicio_index') }}">Back to the list</a>
+            <a href="{{ path('tema_index') }}">Back to the list</a>
         </li>
     </ul>
 {% endblock %}
+
 {% block javascripts %}
     {{ parent() }}
     <script>
-        CKEDITOR.replace( 'ejercicio_enunciado', {
+        CKEDITOR.replace( 'tema_categorias_0_procedimiento', {
             extraPlugins: 'mathjax',
             mathJaxLib: 'http://cdn.mathjax.org/mathjax/2.2-latest/MathJax.js?config=TeX-AMS_HTML',
             height: 200
         } );
-        CKEDITOR.add 
-        CKEDITOR.replace( 'ejercicio_solucionDetallada', {
-            extraPlugins: 'mathjax',
-            mathJaxLib: 'http://cdn.mathjax.org/mathjax/2.2-latest/MathJax.js?config=TeX-AMS_HTML',
-            height: 200
-        } );
-        CKEDITOR.add 
-        CKEDITOR.replace( 'ejercicio_soluciones_0_expresion', {
-            extraPlugins: 'mathjax',
-            mathJaxLib: 'http://cdn.mathjax.org/mathjax/2.2-latest/MathJax.js?config=TeX-AMS_HTML',
-            height: 200
-        } );
+        
 
         if ( CKEDITOR.env.ie && CKEDITOR.env.version == 8 ) {
             document.getElementById( 'ie8-warning' ).className = 'tip alert';
