--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,42 +1,99 @@
-{% extends 'FOSUserBundle::layout.html.twig' %}
-{% block fos_user_content %}
 {% trans_default_domain 'FOSUserBundle' %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <noscript>
+            <p class="alert alert-danger">
+                Javascript está deshabilitado en su navegador web. Por favor, para ver correctamente este sitio, <b><i>habilite javascript</i></b>. Para ver las instrucciones para habilitar javascript en su navegador, haga click <a href="http://www.enable-javascript.com/es/" target="_blank">aquí</a>.
+            </p>
+        </noscript>
+        <meta charset="UTF-8" />
+        <title>{% block title %}Bienvenido!{% endblock %}</title>
+        {% block stylesheets %}
+            <script type='text/javascript'>
+            window.onload = detectarCarga;
+            function detectarCarga(){
+            document.getElementById("imgLOAD").style.display="none";
+            }
+            </script>
+            <link href="{{ asset('bundles/app/css/font-awesome.min.css') }}" type="text/css" rel="stylesheet"/>
+            <link href="{{ asset('bundles/app/css/bootstrap.min.css') }}" type="text/css" rel="stylesheet"/>
+            <link href="{{ asset('bundles/app/plugins/angular-loading-bar/loading-bar.min.css') }}" type="text/css" rel="stylesheet" />
+            <link href="{{ asset('bundles/app/css/style.css') }}" type="text/css" rel="stylesheet"/>
+            <link rel="icon" type="image/x-icon" href="{{ asset('bundles/app//img/favicon2.ico') }}"/>
 
-<div class="container">
-    <div class="row vertical-offset-100">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="panel panel-default {% if error %}has-error{% endif %}">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Inicio de Sesión</h3>
-                </div>
-                <div class="panel-body">
+            <link rel="stylesheet" href="{{ asset('bundles/app/bootstrap/css/bootstrap.min.css')}}">
+            <!-- Font Awesome -->
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+            <!-- Ionicons -->
+            <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+            <!-- Theme style -->
+            <link rel="stylesheet" href="{{ asset('bundles/app/dist/css/AdminLTE.min.css')}}">
+            <link rel="stylesheet" href="{{ asset('bundles/app/plugins/iCheck/square/blue.css')}}">
+            <!-- AdminLTE Skins. Choose a skin from the css/skins
+                 folder instead of downloading all of them to reduce the load. -->
+            <link rel="stylesheet" href="{{ asset('bundles/app/dist/css/skins/_all-skins.min.css')}}">
+            <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+            <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+            <!--[if lt IE 9]>
+                <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+                <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+            <![endif]-->
+        {% endblock %}
+    </head>
+<body class="hold-transition login-page">
+    <div class="login-box">
+      <div class="login-logo">
+        <b>SEPU</b>M
+      </div><!-- /.login-logo -->
+      <div class="login-box-body {% if error %}has-error{% endif %}">
+        <p class="login-box-msg">Inicio de Sesion</p>
+        <form action="{{ path("fos_user_security_check") }}" method="post" accept-charset="UTF-8" role="form">
+          <div class="form-group has-feedback">
+            <input id="username" name="_username" type="text" class="form-control" placeholder="Usuario" required="required"  value="{{ last_username }}">
+            <span class="glyphicon glyphicon-user form-control-feedback"></span>
+          </div>
+          <div class="form-group has-feedback">
+            <input type="password" class="form-control" placeholder="Contraseña" required="required" id="password" name="_password">
+            <span class="fa fa-key form-control-feedback"></span>
+          </div>
+          {% if error %}
+            <span class="help-block">{{ error.messageKey|trans(error.messageData, 'security') }}</span>
+            {% endif %}
+          <div class="row">
+            <div class="col-xs-8">
+              <div class="checkbox icheck">
+                <label>
+                  <input id="remember_me" name="_remember_me" type="checkbox" value="on"> Recordar
+                </label>
+              </div>
+            </div><!-- /.col -->
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+            <div class="col-xs-4">
+              <button id="_submit" name="_submit" type="submit" class="btn btn-primary btn-block btn-flat">Entrar</button>
+            </div><!-- /.col -->
+          </div>
+        </form>
 
-<form action="{{ path("fos_user_security_check") }}" method="post" class="" accept-charset="UTF-8" role="form">
-    <fieldset>
-    <div class="form-group">
-        <label class="sr-only" for="username">{{ 'security.login.username'|trans }}</label>
-        <input class="form-control" id="username" name="_username" placeholder="{{ 'security.login.username'|trans }}" required="required" type="text" value="{{ last_username }}">
-    </div>
-    <div class="form-group">
-        <label class="sr-only" for="password">{{ 'security.login.password'|trans }}</label>
-        <input class="form-control" id="password" name="_password" placeholder="{{ 'security.login.password'|trans }}" required="required" type="password">
-    </div>
-    {% if error %}
-    <span class="help-block">{{ error.messageKey|trans(error.messageData, 'security') }}</span>
-    {% endif %}
-    <div class="checkbox">
-        <label class="text-muted">
-            <input id="remember_me" name="_remember_me" type="checkbox" value="on"> {{ 'security.login.remember_me'|trans }}
-        </label>
-    </div>
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-    <p><button class="btn btn-lg btn-success btn-block" id="_submit" name="_submit" type="submit">{{ 'security.login.submit'|trans }}</button>
-    <a href="{{ path("fos_user_resetting_request") }}">Recuperar contraseña</a></p>
-    </fieldset>
-</form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-{% endblock fos_user_content %}
+        <a href="{{ path("fos_user_resetting_request") }}">Olvide mi contraseña</a><br>
+
+      </div><!-- /.login-box-body -->
+    </div><!-- /.login-box -->
+
+    <!-- jQuery 2.1.4 -->
+   <script src="{{asset('bundles/app/plugins/jQuery/jQuery-2.1.4.min.js')}}"></script>
+    <!-- Bootstrap 3.3.5 -->
+    <script src="{{asset('bundles/app/bootstrap/js/bootstrap.min.js')}}"></script>
+    <!-- iCheck -->
+    <script src="{{asset('bundles/app/plugins/iCheck/icheck.min.js')}}"></script>
+    <script>
+      $(function () {
+        $('input').iCheck({
+          checkboxClass: 'icheckbox_square-blue',
+          radioClass: 'iradio_square-blue',
+          increaseArea: '20%' // optional
+        });
+      });
+    </script>
+  </body>
+</html>
