--- a/app/Resources/views/tema/new.html.twig
+++ b/app/Resources/views/tema/new.html.twig
@@ -2,6 +2,8 @@
 {% block stylesheets %}
     {{ parent() }}
     <script src="http://cdn.ckeditor.com/4.5.7/standard-all/ckeditor.js"></script>
+    <!-- Select2 -->
+    <link rel="stylesheet" href="{{asset('bundles/app/plugins/select2/select2.min.css')}}">
 {% endblock %} 
 {% block body %}
     <h1>Tema creation</h1>
@@ -20,7 +22,13 @@
 
 {% block javascripts %}
     {{ parent() }}
+        <!-- Select2 -->
+    <script src="{{ asset('bundles/app/plugins/select2/select2.full.min.js') }}"></script>
     <script>
+        $(function () {
+            //Initialize Select2 Elements
+            $(".select2").select2();
+        });
         CKEDITOR.replace( 'tema_categorias_0_procedimiento', {
             extraPlugins: 'mathjax',
             mathJaxLib: 'http://cdn.mathjax.org/mathjax/2.2-latest/MathJax.js?config=TeX-AMS_HTML',
