--- a/app/Resources/views/tema/index.html.twig
+++ b/app/Resources/views/tema/index.html.twig
@@ -1,42 +1,69 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Tema list</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nombre</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for tema in temas %}
-            <tr>
-                <td><a href="{{ path('tema_show', { 'id': tema.id }) }}">{{ tema.id }}</a></td>
-                <td>{{ tema.nombre }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('tema_show', { 'id': tema.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('tema_edit', { 'id': tema.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
+    <section class="content">
+        <!-- general form elements -->
+        <div class="box box-primary">
+            <div class="box-header with-border">
+                <h3 class="box-title">Temas</h3>
+            </div><!-- /.box-header -->
+            <div class="box-body" style="overflow:auto;">
+                <svg id="svg-canvas" width="960" height="600"></svg>
+            </div>
+        </div>
+    </section>
     <ul>
         <li>
             <a href="{{ path('tema_new') }}">Create a new entry</a>
         </li>
     </ul>
 {% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{asset('bundles/app/plugins/dagre-d3/dagre-d3.css')}}">
+{% endblock %}
 {% block javascripts %}
     {{ parent() }}
+    <script src="{{asset('bundles/app/plugins/dagre-d3/d3.v3.min.js')}}" charset="utf-8"></script>
+    <script src="{{asset('bundles/app/plugins/dagre-d3/dagre-d3.js')}}" charset="utf-8"></script>
+    <script type="text/javascript">
+    // Create the input graph
+    var g = new dagreD3.graphlib.Graph()
+      .setGraph({})
+      .setDefaultEdgeLabel(function() { return {}; });
 
+    // Here we"re setting nodeclass, which is used by our custom drawNodes function
+    // below.
+    {% for tema in temas %}
+        g.setNode({{ tema.id }},  { labelType:"html", label: "<a href=\"{{ path('tema_show', { 'id': tema.id }) }}\">{{tema}}</a>", class: "type-TOP" });
+    {% endfor %}
+    
+    g.nodes().forEach(function(v) {
+      var node = g.node(v);
+      // Round the corners of the nodes
+      node.rx = node.ry = 5;
+    });
+
+    // Set up edges, no special attributes.
+    {% for tema in temas %}
+        {% for hijo in tema.hijos %}
+           g.setEdge({{tema.id}}, {{hijo.id}});
+        {% endfor %}
+    {% endfor %}
+
+    // Create the renderer
+    var render = new dagreD3.render();
+
+    // Set up an SVG group so that we can translate the final graph.
+    var svg = d3.select("svg"),
+        svgGroup = svg.append("g");
+
+    // Run the renderer. This is what draws the final graph.
+    render(d3.select("svg g"), g);
+
+    // Center the graph
+    var xCenterOffset = (svg.attr("width") - g.graph().width) / 2;
+    svgGroup.attr("transform", "translate(" + xCenterOffset + ", 20)");
+    svg.attr("height", g.graph().height + 40);
+</script>
 {% endblock %}
