--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-    
     <head>
-
         <noscript>
             <p class="alert alert-danger">
                 Javascript está deshabilitado en su navegador web. Por favor, para ver correctamente este sitio, <b><i>habilite javascript</i></b>. Para ver las instrucciones para habilitar javascript en su navegador, haga click <a href="http://www.enable-javascript.com/es/" target="_blank">aquí</a>.
@@ -35,12 +33,10 @@
                 <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
                 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
             <![endif]-->
-        {% endblock %}
-
-        
+        {% endblock %}        
     </head>
-    <body class="hold-transition skin-blue
-    {% if is_granted('ROLE_ESTUDIANTE') %}layout-top-nav{% else %}layout-boxed sidebar-mini{% endif %}">
+    <body ng-app="newTemaModule" class="hold-transition skin-blue
+    {% if is_granted('ROLE_ESTUDIANTE') %}layout-top-nav{% else %}layout-boxed sidebar-mini{% endif %}" ng-controller="LoadCtrl">
         <div id="body" class="wrapper">
         <h3 id="imgLOAD">Cargando...</h3>
 
@@ -249,8 +245,11 @@
 
 
         {% block javascripts %}
-            <!-- jQuery 2.1.4 -->
+      <!-- jQuery 2.1.4 -->
     <script src="{{asset('bundles/app/plugins/jQuery/jQuery-2.1.4.min.js')}}"></script>
+      <!-- AngularJs -->
+    <script src="{{asset('bundles/app/angularjs/angular.min.js')}}"></script>
+    <script src="{{asset('bundles/app/plugins/angular-loading-bar/loading-bar.min.js') }}"></script>
     <!-- Bootstrap 3.3.5 -->
     <script src="{{asset('bundles/app/bootstrap/js/bootstrap.min.js')}}"></script>
     <!-- FastClick -->
