incluido Assetic, diseño vista Tema
cambio de botones, estilo, etc.
Nota: no se manda el formularios, detalle sin resolver.

--- a/app/Resources/views/tema/new.html.twig
+++ b/app/Resources/views/tema/new.html.twig
@@ -6,8 +6,17 @@
 {% endblock %} 
 {% block body %}
 <div class="" ng-controller="newTemaController">
-    <h1>Tema</h1>
-    {{ form_start(form) }}
+    <section class="content-header">
+        <h1>Tema</h1>
+    </section>
+    <section class="content">
+        <div class="box box-primary">
+            <!-- form start -->
+            {{ form_start(form) }}
+            {{ form_end(form) }}
+            {#, 'render_rest': false} #}
+        </div>
+    </section>
     <div id="categoriaModal"class="modal modal-primary">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -21,48 +30,33 @@
                     <textarea ck-editor id="editor1" name="editor1" ng-model="categoria.procedimiento"></textarea></div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-outline pull-left" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-outline" ng-click="saveCategoria()"  data-dismiss="modal">Aceptar</button>
+                    <button type="button" class="btn btn-outline pull-left" data-dismiss="modal"><i class="fa fa-close"></i>&nbsp;Cancelar</button>
+                    <button type="button" class="btn btn-outline" ng-click="saveCategoria()"  data-dismiss="modal"><i class="fa fa-check"></i>&nbsp;Aceptar</button>
                 </div>
                 [[ categoria ]]
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
-    {{ form_row(form.nombre) }}
-    {{ form_row(form.padres) }}
-    <fieldset  data-ng-repeat="categoria in categorias">
-        <span>[[ categoria.nombre ]]<button class="btn btn-warning" data-toggle="modal" data-target="#categoriaModal" ng-click="editAction([[$index]])">Editar</button></span>
-        <div ng-hide="true">
-        <input type="text" value="[[ categoria.nombre]]" ng-model="categoria.nombre" id="[[ 'tema_categorias_'+$index+'_nombre' ]]" name="[['tema[categorias]['+$index+'][nombre]' ]]">
-        <textarea value="[[ categoria.procedimiento]]" ng-model="categoria.procedimiento" id="[[ 'tema_categorias_'+$index+'_procedimiento' ]]" name="[['tema[categorias]['+$index+'][procedimiento]' ]]"></textarea>
-        </div>
-        <button class="remove" ng-show="$last" ng-click="removeCategoria()">-</button>
-    </fieldset>
-    [[ categorias ]]
-    <button class="btn btn-primary btn-lx" data-toggle="modal" data-target="#categoriaModal" ng-click="addNewCategoria()">Agregar categoria</button>
-    
-    <input type="submit" value="Create" />
-
-    {{ form_widget(form._token) }}
-    {{ form_end(form, {'render_rest': false} ) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('tema_index') }}">Back to the list</a>
-        </li>
-    </ul>
 </div>
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
+    {#
+{% javascripts
+    '@AppBundle/Resources/public/plugins/ckeditor/*'
+    '@AppBundle/Resources/public/plugins/select2/*'%}
+    <script src="{{ asset_url }}"></script>
+{% endjavascripts %}
+    #}
     <script src="{{asset('bundles/app/plugins/ckeditor/ckeditor.js')}}"></script>
     <!-- Select2 -->
     <script src="{{ asset('bundles/app/plugins/select2/select2.full.min.js') }}"></script>
     <script>
         $(function () {
             //Initialize Select2 Elements
-            $(".select2").select2();
+            //$(".select2").select2();
+            $("#tema_padres").select2();
         });
         var urlMath = "{{ asset('bundles/app/plugins/MathJax/MathJax.js?config=TeX-AMS_HTML') }}";
         console.log(urlMath);
@@ -75,6 +69,13 @@
             document.getElementById( 'ie8-warning' ).className = 'tip alert';
         }*/
     </script>
+    {#
     <script src="{{ asset('bundles/app/angularjs/newTema/newTemaModule.js') }}"></script>
-    <script src="{{ asset('bundles/app/angularjs/newTema/newTemaController.js') }}"></script>
+    <script src="{{ asset('bundles/app/angularjs/newTema/newTemaController.js') }}"></script>#}
+
+{% javascripts
+    '@AppBundle/Resources/public/angularjs/newTema/newTemaModule.js'
+    '@AppBundle/Resources/public/angularjs/newTema/newTemaController.js'%}
+    <script src="{{ asset_url }}"></script>
+{% endjavascripts %}
 {% endblock %}
