--- a/app/Resources/views/tema/new.html.twig
+++ b/app/Resources/views/tema/new.html.twig
@@ -14,26 +14,30 @@
             <!-- form start -->
             {{ form_start(form) }}
                 <div class="box-body">
+                    {{ form_errors(form) }}
                     {{ form_row(form.nombre) }}
                     {{ form_row(form.padres) }}
-                    {{ form_label(form.categorias) }}
-                    <fieldset  data-ng-repeat="categoria in categorias">
-                        <div class="input-group input-group-sm">
-                            <span class="form-control">[[ categoria.nombre ]]</span>
-                            [[ categoria.procedimiento ]]
-                            <span class="input-group-btn">
-                                <button class="btn btn-warning btn-flat" data-toggle="modal" data-target="#categoriaModal" ng-click="editAction([[$index]])"><i class="fa fa-edit"></i></button>
-                            </span>
-                        </div>
+                    <div ng-init="{% for i in form.categorias %}addCategoria('{{ i.nombre.vars.value}}', '{{ i.procedimiento.vars.value}}');{% endfor %}">
+                        {{ form_label(form.categorias) }}
+                        {{ form_errors(form.categorias) }}
+                        <fieldset data-ng-repeat="categoria in categorias">
+                            <div class="input-group">
+                                <span class="form-control">[[ categoria.nombre ]]</span>
+                                <span class="input-group-btn">
+                                    <a class="btn btn-default btn-flat" data-toggle="modal" data-target="#categoriaModal" ng-click="editAction([[$index]])"><i class="fa fa-edit text-yellow"></i></a>
+                                </span>
+                                <span class="input-group-btn">
+                                    <a class="btn btn-default btn-flat" ng-click="removeAction([[$index]])"><i class="fa fa-trash text-red"></i></a>
+                                </span>
+                            </div>
 
-                        <div ng-hide="false">
-                        <input type="text" value="[[ categoria.nombre ]]" id="[[ 'tema_categorias_'+$index+'_nombre' ]]" name="[['tema[categorias]['+$index+'][nombre]' ]]">
-                        <textarea value="[[ categoria.procedimiento ]]" id="[[ 'tema_categorias_'+$index+'_procedimiento' ]]" name="[['tema[categorias]['+$index+'][procedimiento]' ]]"></textarea>
-                        </div>
-                        <button class="remove" ng-show="$last" ng-click="removeCategoria()">-</button>
-                    </fieldset>
-                    [[ categorias ]]
-                    <button class="btn btn-success btn-sm btn-flat" data-toggle="modal" data-target="#categoriaModal" ng-click="addNewCategoria()"><i class="fa fa-plus"></i>&nbsp;Agregar</button>
+                            <div ng-hide="true">
+                            <input type="text" value="[[ categoria.nombre ]]" id="[[ 'tema_categorias_'+$index+'_nombre' ]]" name="[['tema[categorias]['+$index+'][nombre]' ]]">
+                            <textarea id="[[ 'tema_categorias_'+$index+'_procedimiento' ]]" name="[['tema[categorias]['+$index+'][procedimiento]' ]]">[[ categoria.procedimiento ]]</textarea>
+                            </div>
+                        </fieldset>
+                        <a class="btn btn-success btn-sm btn-flat" data-toggle="modal" data-target="#categoriaModal" ng-click="addNewCategoria()"><i class="fa fa-plus"></i>&nbsp;Agregar</a>
+                    </div>
                 </div>
                 <div class="box-footer">
                     <a class="btn btn-danger btn-flat" href="{{ path('tema_index') }}"><i class="fa fa-arrow-left"></i>&nbsp;Cancelar</a>
@@ -42,14 +46,14 @@
             {{ form_row(form._token) }}
             
                     {#
-                    {{ form_widget(form) }}
+                    {{ form_widget(form.categorias) }}
                     <input type="submit" value="Create" />
                     #}
             {{ form_end(form, {'render_rest': false}) }}
             {#, 'render_rest': false} #}
         </div>
     </section>
-    <div id="categoriaModal"class="modal modal-primary">
+    <div id="categoriaModal"class="modal modal-default">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -57,13 +61,13 @@
                     <h4 class="modal-title">Categoria</h4>
                 </div>
                 <div class="modal-body">
-                    <div><label class="label-control">Nombre</label><input type="text" class="form-control" ng-model="categoria.nombre"></div>
-                    <div><label class="label-control">Procedimiento</label> 
+                    <div><label class="label-control">Nombre&nbsp;<i class="fa fa-asterisk text-red" title="Campo requerido"></i></label><input type="text" class="form-control" ng-model="categoria.nombre"></div>
+                    <div><label class="label-control">Procedimiento&nbsp;<i class="fa fa-asterisk text-red" title="Campo requerido"></i></label> 
                     <textarea ck-editor id="editor1" name="editor1" ng-model="categoria.procedimiento"></textarea></div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-outline pull-left" data-dismiss="modal"><i class="fa fa-close"></i>&nbsp;Cancelar</button>
-                    <button type="button" class="btn btn-outline" ng-click="saveCategoria()"  data-dismiss="modal"><i class="fa fa-check"></i>&nbsp;Aceptar</button>
+                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal"><i class="fa fa-close"></i>&nbsp;Cancelar</button>
+                    <button type="button" class="btn btn-success" ng-click="saveCategoria()"  data-dismiss="modal" ng-disabled="invalidCategoria"><i class="fa fa-check"></i>&nbsp;Aceptar</button>
                 </div>
                 [[ categoria ]]
             </div><!-- /.modal-content -->
@@ -110,4 +114,5 @@
     '@AppBundle/Resources/public/angularjs/newTema/newTemaController.js'%}
     <script src="{{ asset_url }}"></script>
 {% endjavascripts %}
+
 {% endblock %}
