--- a/app/Resources/views/tema/new.html.twig
+++ b/app/Resources/views/tema/new.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="" ng-controller="newTemaController">
     <section class="content-header">
-        <h1>Tema</h1>
+        <h1>Tema&nbsp;<small class="label {% if edition is defined %}bg-yellow">Edición{% else %}bg-green">Nuevo{% endif %}</small></h1>
     </section>
     <section class="content">
         <div class="box box-primary">
@@ -36,7 +36,7 @@
                             <textarea id="[[ 'tema_categorias_'+$index+'_procedimiento' ]]" name="[['tema[categorias]['+$index+'][procedimiento]' ]]">[[ categoria.procedimiento ]]</textarea>
                             </div>
                         </fieldset>
-                        <a class="btn btn-success btn-sm btn-flat" data-toggle="modal" data-target="#categoriaModal" ng-click="addNewCategoria()"><i class="fa fa-plus"></i>&nbsp;Agregar</a>
+                        <a class="btn btn-success btn-xs btn-flat" data-toggle="modal" data-target="#categoriaModal" ng-click="addNewCategoria()"><i class="fa fa-plus"></i>&nbsp;Agregar</a>
                     </div>
                 </div>
                 <div class="box-footer">
@@ -69,7 +69,6 @@
                     <button type="button" class="btn btn-default pull-left" data-dismiss="modal"><i class="fa fa-close"></i>&nbsp;Cancelar</button>
                     <button type="button" class="btn btn-success" ng-click="saveCategoria()"  data-dismiss="modal" ng-disabled="invalidCategoria"><i class="fa fa-check"></i>&nbsp;Aceptar</button>
                 </div>
-                [[ categoria ]]
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
