--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,7 +35,7 @@
             <![endif]-->
         {% endblock %}        
     </head>
-    <body ng-app="newTemaModule" class="hold-transition skin-blue
+    <body ng-app="AppModule" class="hold-transition skin-blue
     {% if is_granted('ROLE_ESTUDIANTE') %}layout-top-nav{% else %}layout-boxed sidebar-mini{% endif %}" ng-controller="LoadCtrl">
         <div id="body" class="wrapper">
         <h3 id="imgLOAD">Cargando...</h3>
@@ -245,18 +245,19 @@
 
 
         {% block javascripts %}
-      <!-- jQuery 2.1.4 -->
-    <script src="{{asset('bundles/app/plugins/jQuery/jQuery-2.1.4.min.js')}}"></script>
-      <!-- AngularJs -->
-    <script src="{{asset('bundles/app/angularjs/angular.min.js')}}"></script>
-    <script src="{{asset('bundles/app/plugins/angular-loading-bar/loading-bar.min.js') }}"></script>
-    <!-- Bootstrap 3.3.5 -->
-    <script src="{{asset('bundles/app/bootstrap/js/bootstrap.min.js')}}"></script>
-    <!-- FastClick -->
-    <script src="{{asset('bundles/app/plugins/fastclick/fastclick.min.js')}}"></script>
-    <!-- AdminLTE App -->
-    <script src="{{asset('bundles/app/dist/js/app.min.js')}}"></script>
-            
+        {#<!-- jQuery 2.1.4 -->#}
+        <script src="{{asset('bundles/app/plugins/jQuery/jQuery-2.1.4.min.js')}}"></script>
+        {#<!-- AngularJs -->#}
+        <script src="{{asset('bundles/app/angularjs/angular.min.js')}}"></script>
+        <script src="{{asset('bundles/app/plugins/angular-loading-bar/loading-bar.min.js') }}"></script>
+        {#<!-- Bootstrap 3.3.5 -->#}
+        <script src="{{asset('bundles/app/bootstrap/js/bootstrap.min.js')}}"></script>
+        {#<!-- FastClick -->}#}
+        <script src="{{asset('bundles/app/plugins/fastclick/fastclick.min.js')}}"></script>
+        {#<!-- AdminLTE App -->#}
+        <script src="{{asset('bundles/app/dist/js/app.min.js')}}"></script>
+        <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+        <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>    
         {% endblock %} 
     </body>
 </html>
